# escargot

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml  release.toml
.github/: settings.yml
.github/workflows/: audit.yml  ci.yml  rust-next.yml
src/: build.rs  cargo.rs  error.rs  lib.rs  msg.rs  run.rs  test.rs
src/format/: diagnostic.rs  mod.rs  test.rs
tests/: build.rs  run.rs
tests/fixtures/bin_lib/: Cargo.toml
tests/fixtures/bin_lib/src/: main.rs
tests/fixtures/dep/: Cargo.toml
tests/fixtures/error/: Cargo.toml
tests/fixtures/error/src/: main.rs
tests/fixtures/example/: Cargo.toml
tests/fixtures/example/examples/: example_fixture.rs
tests/fixtures/lib/: Cargo.toml
tests/fixtures/script/: Cargo.toml
tests/fixtures/test/: Cargo.toml
tests/fixtures/test/src/: lib.rs
tests/fixtures/test/tests/: test.rs
tests/fixtures/warn/: Cargo.toml
tests/fixtures/warn/src/: main.rs
tests/testsuite/: build.rs  run.rs
tests/testsuite/fixtures/bin_lib/: Cargo.toml
tests/testsuite/fixtures/dep/: Cargo.toml
tests/testsuite/fixtures/error/: Cargo.toml
tests/testsuite/fixtures/error/src/: lib.rs
tests/testsuite/fixtures/example/: Cargo.toml
tests/testsuite/fixtures/lib/: Cargo.toml
tests/testsuite/fixtures/script/: Cargo.toml
tests/testsuite/fixtures/test/: Cargo.toml
tests/testsuite/fixtures/test/src/: lib.rs  main.rs
tests/testsuite/fixtures/warn/: Cargo.toml
tests/testsuite/fixtures/warn/src/: lib.rs
