[package]
name = "escargot"
version = "0.3.1"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Cargo API written in Paris"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/escargot.git"
homepage = "https://github.com/crate-ci/escargot"
documentation = "http://docs.rs/escargot/"
readme = "README.md"
categories = ["development-tools::build-utils"]
keywords = ["cargo", "packaging"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.1.0"
log = "0.4"

[features]
# This mostly exists for testing, to catch new fields and enum variants being
# added (for the cases we actually cover).
strict_unstable = []
# This is for when using `escargot` in tests and you want logged output to
# instead be printed because no logger is configured.
print = []
