[package]
name = "escargot"
version = "0.5.10"
description = "Cargo API written in Paris"
authors = ["Ed Page <eopage@gmail.com>"]
repository = "https://github.com/crate-ci/escargot.git"
homepage = "https://github.com/crate-ci/escargot"
documentation = "http://docs.rs/escargot/"
readme = "README.md"
categories = ["development-tools::build-utils"]
keywords = ["cargo", "packaging"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.73"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/escargot/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.2.0"
log = "0.4.4"

[dev-dependencies]
assert_fs = "1.1"

[features]
# Upcoming features in cargo.
cargo_unstable = []
# Programmatic use of `cargo test` (relies on an unstable CLI API).
test_unstable = []
# This mostly exists for testing, to catch new fields and enum variants being
# added (for the cases we actually cover).
strict_unstable = []
# This is for when using `escargot` in tests and you want logged output to
# instead be printed because no logger is configured.
print = []
